# gacha-backend

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  vercel.json
api/: ai.py  asset.py  auth.py  gacha.py  inventory.py
services/ai/: __init__.py  main.py
services/asset/: __init__.py  main.py
services/auth/: __init__.py  main.py
services/gacha/: __init__.py  main.py
services/inventory/: __init__.py  main.py
shared/: __init__.py  auth.py  database.py  settings.py
